--- a/app/src/main/res/layout/activity_login_otp.xml
+++ b/app/src/main/res/layout/activity_login_otp.xml
@@ -9,7 +9,7 @@
     android:layout_margin="20dp"
     android:weightSum="100"
 
-    tools:context=".LoginActivity">
+    tools:context=".LoginOtpActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,7 +23,7 @@
             android:layout_height="32dp"
             android:layout_margin="10dp"
             android:background="@drawable/circular_bg"
-            android:backgroundTint="@color/my_primary">
+            android:backgroundTint="@color/light_gray">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -40,7 +40,7 @@
             android:layout_height="32dp"
             android:layout_margin="10dp"
             android:background="@drawable/circular_bg"
-            android:backgroundTint="@color/light_gray">
+            android:backgroundTint="@color/my_primary">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -70,11 +70,11 @@
         </RelativeLayout>
 
     </LinearLayout>
-    
+
     <ImageView
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:src="@drawable/phone_icon"
+        android:src="@drawable/otp_icon"
         app:tint="@color/my_primary"
         android:layout_weight="20"
         />
@@ -82,14 +82,14 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Enter phone number"
+        android:text="Enter OTP we have sent to your phone number"
         android:layout_gravity="center_vertical"
         android:letterSpacing="0.08"
         android:textStyle="bold"
         android:textSize="25sp"
         android:layout_weight="5"
         />
-    
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -98,41 +98,35 @@
         android:layout_weight="5"
         >
 
-        <com.hbb20.CountryCodePicker
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:ccp_showFlag="false"
-            app:ccp_showNameCode="false"
-            android:id="@+id/login_country_code"
-            />
-        
+
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="10dp"
-            android:hint="Phone number"
-            android:inputType="phone"
+            android:hint="OTP"
+            android:inputType="number"
+            android:maxLength="6"
             android:layout_margin="10dp"
             android:background="@drawable/edit_text_rounded_corner"
             android:elevation="5dp"
-            android:id="@+id/login_phone_number"
+            android:id="@+id/login_otp"
             />
 
     </LinearLayout>
-    
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:gravity="center_vertical"
         android:orientation="vertical"
-        android:layout_weight="20"
+        android:layout_weight="10"
         >
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/bt_rounded_corner"
-            android:text="Send otp"
-            android:id="@+id/send_otp_btn"
+            android:text="Proceed"
+            android:id="@+id/login_next_btn"
             />
 
         <ProgressBar
@@ -143,4 +137,13 @@
             android:id="@+id/login_progress_bar"
             />
     </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="10"
+        android:gravity="center"
+        android:text="Request OTP after 30 seconds"
+        android:id="@+id/resend_otp_text"
+        />
 </LinearLayout>
